--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,7 +10,8 @@
       </ul>
     </div>
   <% end %>
-
+ユーザーID
+  <%= f.collection_select :user_id, User.all, :id, :id, {prompt: true}, {class: "form-control user-id-field"} %>
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
