--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,4 +5,8 @@
   <span class="content">
     <%= link_to article.title, article_path(article.id) %>
   </span>
+  <span>
+    <%= article.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
+  </span>
+
 </li>
