--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,13 @@
-<%= form_for(article) do |f| %>
-  <% if article.errors.any? %>
+<%= form_for(@article) do |f| %>
+  <% if @article.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-      <% article.errors.full_messages.each do |message| %>
+      <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
+      <% @article.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
-ユーザーID
-  <%= f.collection_select :user_id, User.all, :id, :id, {prompt: true}, {class: "form-control user-id-field"} %>
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
