--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,21 @@
-<p id="notice" class="alert alert-success"><%= notice %></p>
-
 <h2>タイトル</h2>
 <p><%= @article.title %></p>
 <h2>内容</h2>
 <p><%= @article.content %></p>
-
-<%= link_to "編集", edit_article_path(@article.id), class: "btn edit-btn" %>
-<%= link_to "削除", article_path(@article.id), method: "delete", class: "btn destroy-btn", "data-confirm" => "本当に削除しますか？" %>
+<div>
+  <% if current_user.likes.find_by(article_id: @article.id) %>
+    <%= link_to 'いいね！を取り消す',unlike_path(@article.id), method: :delete %>
+  <% else %>
+    <%= link_to 'いいね！', like_path(@article.id), method: :post %>
+  <% end %>
+</div>
+<div>
+  <small>
+    <%= link_to @article.likes.count, liking_users_article_path(@article.id)  %>人がいいね！といっています
+  </small>
+</div> 
+  
+<% if current_user?(@article.user) %>
+  <%= link_to "編集", edit_article_path(@article.id), class: "btn edit-btn" %>
+  <%= link_to "削除", article_path(@article.id), method: "delete", class: "btn destroy-btn", "data-confirm" => "本当に削除しますか？" %>
+<% end %>
