--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,19 @@
-
-<%=  @message %>
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<% if user_signed_in? %>
+  <aside class="sidebar">
+    <!-- renderメソッドを用いて、notes/_form.html.erbを呼び出してください -->
+    <%= render 'articles/form' %> 
+  </aside>
+  <ul class="notes">
+    <h2>投稿の一覧</h2>
+    <!-- renderメソッドと@notesを用いて、notes/_note.html.erbを呼び出してください -->
+    <%= render @articles %> 
+  </ul>
+<% else %>
+  <div class="top-wrapper">
+    <%= image_tag "gatebook_cover.png" %>
+    <div class="register-wrapper">
+      <h1><%= @message %></h1>
+      <%= link_to "新規登録", new_user_registration_path, class: "btn btn-large register-btn" %>
+    </div>
+  </div>
+<% end %>
