--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice" class="alert alert-success"><%= notice %></p>
-
 <aside class="sidebar">
   <section>
     <span class="label">ユーザー</span>
@@ -14,9 +12,10 @@
   <section>
     <small><%= link_to 'プロフィールを編集', edit_user_path(@user) %></small>
   </section>
-
+  <%= link_to @user.likes.count, like_articles_user_path(@user.id) %>個の投稿にいいね!しています
 </aside>
 
 <ul class="notes">
+  <h2><%= @title %></h2>
   <%= render @articles %>
 </ul>
